Trabalhando com o IBGE

--- a/manipulando_mapas.ipynb
+++ b/manipulando_mapas.ipynb
@@ -284,6 +284,89 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Os dados do IBGE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ibge_maringa = CSV.read(\"data/IBGE_maringa.csv.gz\", DataFrame);\n",
+    "first(ibge_maringa, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "size(ibge_maringa)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ibge_maringa[!, \"geometry\"] = ArchGDAL.createpoint.(ibge_maringa.LONGITUDE, ibge_maringa.LATITUDE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "populacao_setorial = ibge_maringa |> @groupby(_.COD_SETOR) |> @map({CD_SETOR=convert(String, key(_)), populacao=length(_)}) |> DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "densidade = setores_maringa |> @join(populacao_setorial, _.CD_SETOR, _.CD_SETOR, {_.CD_SETOR, _.geometry, __.populacao}) |> DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot(setores_maringa.geometry, column=\"populacao\", color_palette=:Reds, aspectratio=true, grid=false)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Convertendo coordenadas\n",
     "\n",
     "Geralmente, as coordenadas são dadas em *ângulos*, mas calcular a distância entre dois pontos dados por ângulos não é recomendada, pois é necessário utilizar um modelo elipsoidal da Terra, uma distância comumente chamada de distância geodésica. Para resolver isso, nós projetamos o nosso mapa usando alguns dos muitos esquemas de representação do nosso mundo em coordenadas, chamados de ESPG.\n",
