Usa PlotlyJS e ignora dados de mapas.

--- a/manipulando_mapas.ipynb
+++ b/manipulando_mapas.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plotly()"
+    "plotlyjs()"
    ]
   },
   {
@@ -100,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot(municipios_estado.geometry, zcolor=municipios_estado.AREA_KM2, aspectratio=true, grid=false, color_palette=:Reds)\n",
+    "plot(municipios_estado.geometry, column=\"AREA_KM2\", aspectratio=true, grid=false, color_palette=:Reds)\n",
     "#plot!(plt, GeoDataFrames.boundary.(municipios_estado.geometry), color=:white)\n",
     "#plt"
    ]
@@ -330,7 +330,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "densidade = setores_maringa |> @join(populacao_setorial, _.CD_SETOR, _.CD_SETOR, {_.CD_SETOR, _.geometry, __.populacao}) |> DataFrame"
+    "densidade = setores_maringa |> @join(populacao_setorial, _.CD_SETOR, _.CD_SETOR, {_.CD_SETOR, _.geometry, _.AREA_KM2, __.populacao}) |> DataFrame\n",
+    "densidade[!, \"densidade\"] = densidade.populacao ./ densidade.AREA_KM2"
    ]
   },
   {
@@ -339,29 +340,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot(setores_maringa.geometry, column=\"populacao\", color_palette=:Reds, aspectratio=true, grid=false)"
+    "plot(densidade.geometry, column=\"densidade\", color_palette=:Reds, aspectratio=true, grid=false)\n",
+    "xaxis!((-52.0, -51.9))\n",
+    "yaxis!((-23.50, -23.35))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
