Resolvido tamanho dos dados

--- a/manipulando_mapas.ipynb
+++ b/manipulando_mapas.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "municipios = GeoDataFrames.read(\"data/mapas_municipios/BR_Municipios_2022.shp\")"
+    "municipios_estado = GeoDataFrames.read(\"data/municipios/PR_Municipios_2022.shp\")"
    ]
   },
   {
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "estado = \"PR\""
+    "n_cidades = nrow(municipios_estado)"
    ]
   },
   {
@@ -44,26 +44,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "municipios |> @groupby(_.SIGLA_UF) |> @map({uf=key(_), cidades=length(_)}) |> @filter(_.uf == estado) |> DataFrame"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n_cidades = nrow(municipios |> @filter(_.SIGLA_UF == estado) |> DataFrame)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot(municipios[municipios.SIGLA_UF .== estado, \"geometry\"], aspectratio=true, grid=false, alpha=0.5, color_palette=palette(:Paired, n_cidades))\n",
-    "plot!(GeoDataFrames.boundary.(municipios[municipios.SIGLA_UF .== estado, \"geometry\"]), color=:black, aspectratio=true, grid=false)"
+    "plot(municipios_estado.geometry, aspectratio=true, grid=false, alpha=0.5, color_palette=palette(:Paired, n_cidades))\n",
+    "plot!(GeoDataFrames.boundary.(municipios_estado.geometry), color=:black, aspectratio=true, grid=false)"
    ]
   },
   {
@@ -71,15 +53,6 @@
    "metadata": {},
    "source": [
     "#### Qual a cidade com maior área?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "municipios_estado = municipios |> @filter(_.SIGLA_UF == estado) |> DataFrame;"
    ]
   },
   {
@@ -111,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "maringa = municipios |> @filter(_.NM_MUN == \"Maringá\") |> @select(-:SIGLA_UF, -:AREA_KM2) |> DataFrame"
+    "maringa = municipios_estado |> @filter(_.NM_MUN == \"Maringá\") |> @select(-:SIGLA_UF, -:AREA_KM2) |> DataFrame"
    ]
   },
   {
