Voronoi com densidade para mapas.

--- a/mapas-e-voronoi.ipynb
+++ b/mapas-e-voronoi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,9 +66,6 @@
     "\n",
     "\t\t\tm = map(p -> metric(p, curr_p), P)\n",
     "\t\t\tminval, imin = findmin(m)\n",
-    "\n",
-    "\t\t\tm[imin] = Inf\n",
-    "\t\t\tsecval, _ = findmin(m)\n",
     "\n",
     "\t\t\tpoints[(j - 1) * npx + i] = curr_p\n",
     "\t\t\tlabels[j, i] = imin\n",
@@ -232,6 +229,68 @@
    "outputs": [],
    "source": [
     "reproject(ubs_maringa[:, \"geometry\"], c_destino, c_origem, order=:trad);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# O problema\n",
+    "\n",
+    "Primeiramente, adaptamos a nossa função de Voronoi para fazer duas tarefas: estimar a área de cada região poligonal e estimar a quantidade de maringaenses que mora em cada região poligonal. Para o primeiro, assumindo uma distribuição uniforme dos pontos, calculamos a relação entre os pontos que estão dentro de uma região `i` e a quantidade total de pontos. Para a segunda, simplesmente verificamos as distâncias entre os dados do IBGE e cada UBS."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function voronoi_densidade(P::Vector{Point2D}, pibge::Vector{Point2D}, metric=(A::Point2D,B::Point2D)->sqrt((B.x-A.x)^2+(B.y-A.y)^2);limx=[0,100],limy=[0,100],density=1000, mapf=nothing)\n",
+    "\tpx = [limx[1]:(limx[2]-limx[1])/density:limx[2];]\n",
+    "\tpy = [limy[1]:(limy[2]-limy[1])/density:limy[2];]\n",
+    "\tnpx = length(px)\n",
+    "\tnpy = length(py)\n",
+    "\tn = length(P)\n",
+    "\n",
+    "\tarea_total = (limx[2]-limx[1])*(limx[2]-limx[1])\n",
+    "\tpts_total = npx*npy \n",
+    "\n",
+    "    count = zeros(Int, n)\n",
+    "\n",
+    "\tfor i=1:npx \n",
+    "\t\tfor j=1:npy \n",
+    "\t\t\tcurr_p = Point2D(px[i],py[j])\n",
+    "\n",
+    "\t\t\t(mapf != nothing) && (!mapf(curr_p)) && continue\n",
+    "\n",
+    "\t\t\tm = map(p -> metric(p, curr_p), P)\n",
+    "\t\t\tminval, imin = findmin(m)\n",
+    "\n",
+    "            count[imin] += 1\n",
+    "\t\t\t\n",
+    "\t\tend\n",
+    "\t\t\n",
+    "\tend\n",
+    "\n",
+    "    # Estimativa da area usando pontos igualmente espacados\n",
+    "    area = [(count[i] / pts_total) * area_total for i in 1:n]\n",
+    "\n",
+    "    # Quantidade de pessoas do IBGE que estao no poligono i\n",
+    "    pop = zeros(Int, n)\n",
+    "\n",
+    "    for p in pibge\n",
+    "\n",
+    "        m = map(x -> metric(x, p), P)\n",
+    "        minval, imin = findmin(m)\n",
+    "\n",
+    "        pop[imin] += 1\n",
+    "\n",
+    "    end\n",
+    "\n",
+    "    # Densidade em habs /metro quadrado\n",
+    "    return pop ./ area\n",
+    "end"
    ]
   }
  ],
