Voronoi com densidade e mais.

--- a/mapas-e-voronoi.ipynb
+++ b/mapas-e-voronoi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plotly()"
+    "plotlyjs()"
    ]
   },
   {
@@ -228,7 +228,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reproject(ubs_maringa[:, \"geometry\"], c_destino, c_origem, order=:trad);"
+    "# reproject(ubs_maringa[:, \"geometry\"], c_destino, c_origem, order=:trad);\n",
+    "# reproject(maringa[:, \"geometry\"], c_destino, c_origem, order=:trad);"
    ]
   },
   {
@@ -291,6 +292,24 @@
     "    # Densidade em habs /metro quadrado\n",
     "    return pop ./ area\n",
     "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pontos_ibge = [Point2D(ArchGDAL.getx(p, 0), ArchGDAL.gety(p, 0)) for p in ibge]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "densidade = voronoi_densidade(P, pontos_ibge; limx=[5.1940058483459605e6, 5.221342165950402e6], limy=[7.392234804831119e6, 7.425889009771498e6], density=500, mapf=esta_no_mapa)"
    ]
   }
  ],
