Versao final de dados e mapas.

--- a/manipulando_mapas.ipynb
+++ b/manipulando_mapas.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Trabalhando com tabelas e dados geográficos\n",
+    "\n",
+    "Para essa parte, você deverá baixar os dados no [Google Drive](https://drive.google.com/file/d/1BoaLcy0Ew_rSUVqroYwKvFMZDpWgAVUI/view?usp=sharing) e colocá-los na seguinte estrutura:\n",
+    "\n",
+    "    data -> colocar aqui dados das UBS e o IBGE de Maringá\n",
+    "    data/municipios -> colocar aqui os dados dos municipios do PR\n",
+    "    data/setores -> colocar aqui os dados dos setores de Maringá"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -17,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plotlyjs()"
+    "gr()"
    ]
   },
   {
@@ -52,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Qual a cidade com maior área?"
+    "### Qual a cidade com maior área?"
    ]
   },
   {
@@ -103,6 +116,13 @@
    "outputs": [],
    "source": [
     "plot(GeoDataFrames.boundary.(maringa.geometry), color=:black, aspectratio=true, grid=false)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Que outra pergunta podemos fazer?"
    ]
   },
   {
@@ -175,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Unidades Básicas de Saúde\n",
+    "## Unidades Básicas de Saúde\n",
     "\n",
     "Agora utilizaremos os dados obtidos em [Dados.gov.br](https://dados.gov.br/) sobre as posições da Unidades Básicas de Saúde de todo o Brasil, filtrando-as pelo código de Maringá e desenhando-as no mapa.\n",
     "\n",
@@ -239,13 +259,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "plot(GeoDataFrames.boundary.(setores_maringa.geometry), color=:red, aspectratio=true, grid=false)\n",
     "plot!(ubs_maringa.geometry, marker=:circle, color=:green, markersize=3)\n",
@@ -257,7 +270,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Os dados do IBGE"
+    "## Os dados do IBGE\n",
+    "\n",
+    "Esses dados vieram do Censo 2022 e, pela primeira vez, o IBGE colocou informações de georreferenciamento, removendo dados sensíveis dos entrevistados. Aqui, só iremos usar para contar as pessoas e desenhar."
    ]
   },
   {
@@ -322,7 +337,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Convertendo coordenadas\n",
+    "## Convertendo coordenadas\n",
     "\n",
     "Geralmente, as coordenadas são dadas em *ângulos*, mas calcular a distância entre dois pontos dados por ângulos não é recomendada, pois é necessário utilizar um modelo elipsoidal da Terra, uma distância comumente chamada de distância geodésica. Para resolver isso, nós projetamos o nosso mapa usando alguns dos muitos esquemas de representação do nosso mundo em coordenadas, chamados de ESPG.\n",
     "\n",
