--- a/mapas-e-voronoi.ipynb
+++ b/mapas-e-voronoi.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mapas e Voronoi\n",
+    "\n",
+    "Agora iremos utilizar os dados de mapas, censitários e o algoritmo de Voronoi para poder analisar a situação das UBS na cidade de Maringá."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -17,7 +26,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plotlyjs()"
+    "gr()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O algoritmo abaixo é quase uma cópia do que foi feito no notebook anterior, com a diferença que ele filtra pelo mapa, utilizando essa função opcional `mapf`."
    ]
   },
   {
@@ -82,6 +98,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Será que dá certo?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -105,7 +128,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ubs_brasil = CSV.read(\"data/ubs.csv.gz\", DataFrame);"
+    "ubs_brasil = CSV.read(\"data/ubs.csv.gz\", DataFrame);\n",
+    "names(ubs_brasil)"
    ]
   },
   {
@@ -114,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ubs_maringa = ubs_brasil |> @filter(_.IBGE == cod_maringa / 10) |> @select(:CNES, :NOME, :geometry, :LONGITUDE, :LATITUDE) |> DataFrame"
+    "ubs_maringa = ubs_brasil |> @filter(_.IBGE == cod_maringa / 10) |> @select(:CNES, :NOME, :geometry, :LOGRADOURO, :LONGITUDE, :LATITUDE) |> DataFrame"
    ]
   },
   {
@@ -124,6 +148,13 @@
    "outputs": [],
    "source": [
     "ubs_maringa[!, \"geometry\"] = ArchGDAL.createpoint.(parse.(Float64, replace.(convert.(String, ubs_maringa.LONGITUDE), \",\" => \".\")), parse.(Float64, replace.(convert.(String, ubs_maringa.LATITUDE), \",\" => \".\")))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para trabalharmos com distâncias, temos que converter as coordenadas para um sistema \"cartesiano\"."
    ]
   },
   {
@@ -196,6 +227,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A função abaixo devolve `true` se o ponto pertence ao mapa ou `false` caso contrário."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -236,7 +274,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# O problema\n",
+    "## O problema\n",
     "\n",
     "Primeiramente, adaptamos a nossa função de Voronoi para fazer duas tarefas: estimar a área de cada região poligonal e estimar a quantidade de maringaenses que mora em cada região poligonal. Para o primeiro, assumindo uma distribuição uniforme dos pontos, calculamos a relação entre os pontos que estão dentro de uma região `i` e a quantidade total de pontos. Para a segunda, simplesmente verificamos as distâncias entre os dados do IBGE e cada UBS."
    ]
@@ -254,10 +292,12 @@
     "\tnpy = length(py)\n",
     "\tn = length(P)\n",
     "\n",
-    "\tarea_total = (limx[2]-limx[1])*(limx[2]-limx[1])\n",
+    "\tarea_total = (limx[2]-limx[1])*(limy[2]-limy[1])\n",
     "\tpts_total = npx*npy \n",
     "\n",
     "    count = zeros(Int, n)\n",
+    "\tlabels = zeros(Int, npx, npy)\n",
+    "\tdensidade = zeros(npx, npy)\n",
     "\n",
     "\tfor i=1:npx \n",
     "\t\tfor j=1:npy \n",
@@ -269,6 +309,7 @@
     "\t\t\tminval, imin = findmin(m)\n",
     "\n",
     "            count[imin] += 1\n",
+    "\t\t\tlabels[j,i]  = imin\t\n",
     "\t\t\t\n",
     "\t\tend\n",
     "\t\t\n",
@@ -289,18 +330,27 @@
     "\n",
     "    end\n",
     "\n",
+    "\tfor i = 1:n\n",
+    "\n",
+    "\t\tdensidade[labels .== i] .= ((pop[i] == 0.0) ? 0 : pop[i] / area[i]) * 1.0e6\n",
+    "\tend\n",
+    "\n",
+    "\tplt = plot()\n",
+    "\tprintln(\"Drawing ... \")\n",
+    "\theatmap!(plt, px, py, densidade, c=:coolwarm)\n",
+    "\tdraw_points(P,plt) \n",
+    "\n",
+    "\n",
     "    # Densidade em habs /metro quadrado\n",
-    "    return pop ./ area\n",
+    "    return pop, area, plt\n",
     "end"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "pontos_ibge = [Point2D(ArchGDAL.getx(p, 0), ArchGDAL.gety(p, 0)) for p in ibge]"
+    "Agora carregamos os dados do IBGE de Maringá e preparamos os pontos para a comparação de distâncias."
    ]
   },
   {
@@ -309,7 +359,138 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "densidade = voronoi_densidade(P, pontos_ibge; limx=[5.1940058483459605e6, 5.221342165950402e6], limy=[7.392234804831119e6, 7.425889009771498e6], density=500, mapf=esta_no_mapa)"
+    "ibge_maringa = CSV.read(\"data/IBGE_maringa.csv.gz\", DataFrame);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ibge_maringa[!, \"geometry\"] = ArchGDAL.createpoint.(ibge_maringa.LONGITUDE, ibge_maringa.LATITUDE);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reproject(ibge_maringa.geometry, c_origem, c_destino, order=:trad);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pontos_ibge = ibge_maringa |> @map(Point2D(ArchGDAL.getx(_.geometry, 0), ArchGDAL.gety(_.geometry, 0))) |> collect"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Utilizamos a nossa função de Voronoi para calcular estimativas da população e da área das regiões."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pop, area, plt = voronoi_densidade(P, pontos_ibge; limx=[5.1940058483459605e6, 5.221342165950402e6], limy=[7.392234804831119e6, 7.425889009771498e6], density=1000, mapf=esta_no_mapa)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compare essa estimativa com a área de Maringá dada pelo IBGE. Ficou boa?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sum(area) / 1.0e6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Desenhando a nossa solução a variável `plt` foi calculada na nova função de Voronoi."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot(plt, GeoDataFrames.boundary.(maringa.geometry), color=:black, aspectratio=true, grid=false)\n",
+    "xaxis!((5.20e6, 5.221342165950402e6))\n",
+    "yaxis!((7.40e6, 7.415e6))\n",
+    "#xaxis!(false)\n",
+    "#yaxis!(false)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ubs_maringa[!, \"densidade\"] = [((pop[i] == 0.0) ? 0 : pop[i] / area[i]) * 1.0e6 for i in 1:length(P)];"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "histogram(ubs_maringa.densidade)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ubs_maringa[ubs_maringa.densidade .== maximum(ubs_maringa.densidade), :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ubs_maringa |> @filter(_.densidade == maximum(ubs_maringa.densidade)) |> DataFrame"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Como é possível termos regiões de UBS's com 0 habitantes?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "estranhas = findall(area .== 0.0)"
    ]
   }
  ],
